src/test/ui/macros/incorrrect-repetition.stderr
error: `$e:expr` is followed (through repetition) by `$i:ident`, which is not allowed for `expr` fragments
  --> $DIR/incorrrect-repetition.rs:4:17
   |
LL |     ($($i:ident $e:expr)*) => {}
   |        -------- ^^^^^^^ this fragment is followed by the first fragment in this repetition without a valid separator
   |        |
   |        this is the first fragment in the evaluated repetition
   |
note: lint level defined here
  --> $DIR/incorrrect-repetition.rs:1:9
   |
LL | #![deny(incorrect_macro_fragment_repetition)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #56575 <https://github.com/rust-lang/rust/issues/56575>
   = note: allowed there are: `;`, `=>` or `,`
help: add a valid separator for the repetition to be unambiguous, for example
   |
LL |     ($($i:ident $e:expr);*) => {}
   |                         ^

error: aborting due to previous error

